Fixed right side of link bordering, changed indextext font size, spacing and family, wrote in correct lfilepath for broken glass link. Also increased title font size.

--- a/css/main.css
+++ b/css/main.css
@@ -18,10 +18,13 @@
   background: #343439;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   padding: 0;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 body {
@@ -32,6 +35,7 @@ body {
 .wrapper {
   margin-top: 1.5vh;
   background-color: #0A0528;
+  height: 97.2%;
   height: 97.2vh;
   width: 100%;
   min-height: 100%;
@@ -46,12 +50,14 @@ body {
   text-decoration: none;
   width: 50vw;
   margin-right: 50vw;
+  display: block;
 }
 
 .title {
   transition: all 250ms ease-in-out;
   width: 50%;
   margin-right: 50vw;
+  margin-bottom: 5vh;
 }
 .title:hover {
   transform: scale(1.05);
@@ -60,10 +66,10 @@ body {
 h1 {
   margin-bottom: 0;
   margin-top: 0;
+  margin-left: 14.65vw;
   align-content: left;
-  font-size: 4em;
+  font-size: 4.2em;
   color: #F7F7FF;
-  padding-left: 14.65vw;
   padding-top: 10vh;
   padding-bottom: 1vh;
   font-family: "Jost", sans-serif;
@@ -76,7 +82,7 @@ h1 {
 #rectangle {
   margin-top: 0px;
   margin-bottom: 0px;
-  margin-left: 15vw;
+  margin-left: 15.1vw;
   width: 12.5vw;
   height: 0.4%;
   background-color: #623CEA;
@@ -85,9 +91,9 @@ h1 {
 h2 {
   margin-top: 1vh;
   align-content: left;
-  font-size: 2em;
+  font-size: 2.2em;
   color: #F4BBD3;
-  padding-left: 14.92vw;
+  margin-left: 14.95vw;
   font-family: "Jost", sans-serif;
   font-weight: bold;
   font-stretch: ultra-expanded;
@@ -96,20 +102,26 @@ h2 {
 }
 
 .indextext {
-  margin-top: 2vh;
+  margin-top: 7.5vh;
   color: #F7F7FF;
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo", sans-serif;
   font-size: 0.9em;
   padding-left: 15vw;
-  line-height: 2;
+  line-height: 2.758;
+  font-weight: inherit;
 }
 
 .footer {
   color: #2AB7CA;
   text-align: center;
-  font-family: "Muli";
+  font-family: "Muli", sans-serif;
   font-weight: 300;
   font-size: 0.75em;
+}
+
+#brokenglass {
+  margin-bottom: 1000vh;
+  align-items: bottom;
 }
 
 /*# sourceMappingURL=main.css.map */
